# vision_msgs_rviz_plugins

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  plugins_description.xml
.devcontainer/: devcontainer.json
.github/workflows/: Build.yml
conf/: Detection3DArray.rviz  conf.rviz
include/vision_msgs_rviz_plugins/: bounding_box_3d.hpp  bounding_box_3d_array.hpp  bounding_box_3d_common.hpp  detection_3d.hpp  detection_3d_array.hpp  detection_3d_common.hpp  visibility_control.hpp
samples/: BoundingBox3D.py  BoundingBox3DArray.py  Detection3D.py  Detection3DArray.py
src/: bounding_box_3d.cpp  bounding_box_3d_array.cpp  detection_3d.cpp  detection_3d_array.cpp
